objects/Support__c.object
<CustomObject>
    <description>Contact support</description>
    <label>Support</label>
    <nameField>
        <displayFormat>PKI-{00000000}</displayFormat>
        <label>Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Office_Location__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Waiting for Submitter response</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Email Sent to Local IT support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instruction__c</fullName>
        <defaultValue>&quot;Submit a WOS ticket for non salesforce.com support and Help&quot;</defaultValue>
        <label>Instruction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_type__c</fullName>
        <label>Problem Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Related</fullName>
                </value>
                <value>
                    <fullName>General and Other issues</fullName>
                </value>
                <value>
                    <fullName>Mobile Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>New User Request</fullName>
                </value>
                <value>
                    <fullName>Reports and Dashboards</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com How-Tos</fullName>
                </value>
                <value>
                    <fullName>Sales functionality</fullName>
                </value>
                <value>
                    <fullName>Service functionality</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>User Reactivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASLS</fullName>
                </value>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email2HelpDesk__c</fullName>
        <label>Email2HelpDesk</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Email__c</fullName>
        <formula>Office_Location__r.HelpDesk_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HelpDesk Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Phone__c</fullName>
        <formula>Office_Location__r.DayTime_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HelpDesk Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office location</description>
        <inlineHelpText>Select your office location</inlineHelpText>
        <label>Office Location</label>
        <referenceTo>ITHelpDesk_Contacts__c</referenceTo>
        <relationshipLabel>Support</relationshipLabel>
        <relationshipName>Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_User_Email_ID__c</fullName>
        <description>A Valid PerkinElmer user ID is required</description>
        <label>New User Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_User_Employee_ID__c</fullName>
        <inlineHelpText>A valid employee ID is required for salesforce.com account creation</inlineHelpText>
        <label>New User Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_to_mirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter existing salesforce.com user account to mirror for the new account creation</inlineHelpText>
        <label>Current User to mirror</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username_to_Reactivate__c</fullName>
        <label>Username to Reactivate</label>
        <type>Email</type>
    </fields>
    <validationRules>
        <fullName>GBL_GBL_Support_newuser_fields_populated</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( ISPICKVAL( Problem_type__c,&apos;New User Request&apos;), ISBLANK( New_User_Email_ID__c ) ) , 
AND(NOT( ISBLANK( New_User_Email_ID__c )) , NOT(ISPICKVAL( Problem_type__c,&apos;New User Request&apos;))) )</errorConditionFormula>
        <errorMessage>IF &apos;problem type&apos; is New User Request, ensure &apos;New User Creation Details&apos; section is populated. Otherwise leave it blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GBL_GBL_Support_reactivatefields_popultd</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( ISPICKVAL( Problem_type__c,&apos;User Reactivation&apos;), ISBLANK( Username_to_Reactivate__c ) ) , 
AND(NOT( ISBLANK( Username_to_Reactivate__c )) , NOT(ISPICKVAL( Problem_type__c,&apos;User Reactivation&apos;))) )</errorConditionFormula>
        <errorMessage>IF &apos;problem type&apos; is User Reactivation, ensure &apos;Username to reactivate&apos; field is populated. For all other problem types, &apos;Username to reactivate&apos;  field must be left blank.</errorMessage>
    </validationRules>
</CustomObject>